--- a/index.html
+++ b/index.html
@@ -3,9 +3,51 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css">
-	<title>演習問題0-0</title>
+	<title>演習問題1-6</title>
 </head>
-<body>
 
+<body>
+	<section class="main-visual">
+		<h1 class="headline">サービス紹介</h1>
+	</section>
+
+	<main>
+		<section>
+			<h3>
+				<img src="img/wc-logo.png">
+				<p>マンツーマンサポートによる学習で、<br>
+				確実にWebスキルを習得できるプログラミングスクールです。</p>
+				<a href="https://web-camp.io/">webサイト</a>
+			</h3>
+		</section>
+
+		<section>
+			<h3>
+				<img src="img/wcp-logo.png">
+				<p>未経験から転職を保証する<br>
+				日本で唯一のプログラミングスクールです。</p>
+				<a href="https://web-camp.io/">webサイト</a>
+			</h3>
+		</section>
+
+		<section>
+			<h3>
+				<img src="img/wcw-logo.png">
+				<p>家庭も仕事も頑張りたい主婦・ママ向けの、<br>
+				1ヶ月でWebサイトを制作するWebデザインスクールです。</p>
+				<a href="https://web-camp.io/">webサイト</a>
+			</h3>
+		</section>
+
+		<section>
+			<h3>
+				<img src="img/wcc-logo.png">
+				<p>3000名のエンジニアをサポートしてきたエージェントが<br>
+				あなたの転職をサポート。</p>
+				<a href="https://web-camp.io/">webサイト</a>
+			</h3>
+		</section>
+	</main>
 </body>
+
 </html>
