--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</section>
 
 	<main>
-		<section>
+		<section class="content">
 			<h3>
 				<img src="img/wc-logo.png">
 				<p>マンツーマンサポートによる学習で、<br>
@@ -21,7 +21,7 @@
 			</h3>
 		</section>
 
-		<section>
+		<section class="content">
 			<h3>
 				<img src="img/wcp-logo.png">
 				<p>未経験から転職を保証する<br>
@@ -30,7 +30,7 @@
 			</h3>
 		</section>
 
-		<section>
+		<section class="content">
 			<h3>
 				<img src="img/wcw-logo.png">
 				<p>家庭も仕事も頑張りたい主婦・ママ向けの、<br>
@@ -39,7 +39,7 @@
 			</h3>
 		</section>
 
-		<section>
+		<section class="content">
 			<h3>
 				<img src="img/wcc-logo.png">
 				<p>3000名のエンジニアをサポートしてきたエージェントが<br>
